feat: Semantic Token collection (WIP)